kubernetes/zeus.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zeus
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: zeus
  namespace: zeus
  labels:
    app: zeus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zeus
  template:
    metadata:
      labels:
        app: zeus
    spec:
      containers:
        - name: zeus
          image: dirigiblelabs/zeus
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: zeus
  namespace: zeus
  labels:
    app: zeus
spec:
  ports:
  - port: 8080
  type: ClusterIP
  selector:
    app: zeus
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: "nginx"
  name: zeus
  namespace: zeus
spec:
  tls:
  # Replace the placeholder with your domain name (e.g. ingress.dev.blog.shoot.canary.k8s-hana.ondemand.com)
  - hosts:
    - zeus.<your-domain-name>
    secretName: zeus-certificate
  rules:
    # Replace the placeholder with your domain name (e.g. ingress.dev.blog.shoot.canary.k8s-hana.ondemand.com)
    - host: zeus.<your-domain-name>
      http:
        paths:
          - path: /
            backend:
              serviceName: zeus
              servicePort: 8080
